tests/ui/stable_embedder_cannot_use_engine_without_internal.stderr
error[E0603]: module `engine` is private
 --> tests/ui/stable_embedder_cannot_use_engine_without_internal.rs:5:21
  |
5 |     let _ = podbot::engine::ExecMode::Attached;
  |                     ^^^^^^            -------- unit variant `Attached` is not publicly re-exported
  |                     |
  |                     private module
  |
note: the module `engine` is defined here
 --> src/lib.rs
  |
  | mod engine;
  | ^^^^^^^^^^
